docs/0.7/_sources/api/gammapy.catalog.SourceCatalogObjectHGPS.rst.txt
SourceCatalogObjectHGPS
=======================

.. currentmodule:: gammapy.catalog

.. autoclass:: SourceCatalogObjectHGPS
   :show-inheritance:

   .. rubric:: Attributes Summary

   .. autosummary::

      ~SourceCatalogObjectHGPS.energy_range
      ~SourceCatalogObjectHGPS.flux_points
      ~SourceCatalogObjectHGPS.index
      ~SourceCatalogObjectHGPS.is_pointlike
      ~SourceCatalogObjectHGPS.name
      ~SourceCatalogObjectHGPS.position
      ~SourceCatalogObjectHGPS.spectral_model

   .. rubric:: Methods Summary

   .. autosummary::

      ~SourceCatalogObjectHGPS.info
      ~SourceCatalogObjectHGPS.pprint
      ~SourceCatalogObjectHGPS.spatial_model

   .. rubric:: Attributes Documentation

   .. autoattribute:: energy_range
   .. autoattribute:: flux_points
   .. autoattribute:: index
   .. autoattribute:: is_pointlike
   .. autoattribute:: name
   .. autoattribute:: position
   .. autoattribute:: spectral_model

   .. rubric:: Methods Documentation

   .. automethod:: info
   .. automethod:: pprint
   .. automethod:: spatial_model
