docs/0.9/_sources/api/gammapy.catalog.SourceCatalogObjectHGPS.rst.txt
SourceCatalogObjectHGPS
=======================

.. currentmodule:: gammapy.catalog

.. autoclass:: SourceCatalogObjectHGPS
   :show-inheritance:

   .. rubric:: Attributes Summary

   .. autosummary::

      ~SourceCatalogObjectHGPS.energy_range
      ~SourceCatalogObjectHGPS.flux_points
      ~SourceCatalogObjectHGPS.index
      ~SourceCatalogObjectHGPS.is_pointlike
      ~SourceCatalogObjectHGPS.name
      ~SourceCatalogObjectHGPS.position
      ~SourceCatalogObjectHGPS.sky_model
      ~SourceCatalogObjectHGPS.spatial_model
      ~SourceCatalogObjectHGPS.spatial_model_type
      ~SourceCatalogObjectHGPS.spectral_model_type

   .. rubric:: Methods Summary

   .. autosummary::

      ~SourceCatalogObjectHGPS.info
      ~SourceCatalogObjectHGPS.spectral_model

   .. rubric:: Attributes Documentation

   .. autoattribute:: energy_range
   .. autoattribute:: flux_points
   .. autoattribute:: index
   .. autoattribute:: is_pointlike
   .. autoattribute:: name
   .. autoattribute:: position
   .. autoattribute:: sky_model
   .. autoattribute:: spatial_model
   .. autoattribute:: spatial_model_type
   .. autoattribute:: spectral_model_type

   .. rubric:: Methods Documentation

   .. automethod:: info
   .. automethod:: spectral_model
